apps/base/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecr-app-auth-service
  namespace: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
